buildscript {
	ext {
		springBootVersion = '2.4.0'
	}
	repositories {
		mavenCentral()
		maven { url 'https://repo.spring.io/snapshot' }
		maven { url 'https://repo.spring.io/milestone' }
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'application'

group = 'ru.devag'
version = '0.5.1'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/snapshot' }
	maven { url 'https://repo.spring.io/milestone' }
	/*flatDir { dirs "libs" }*/
	maven { url './repo' } 

}

sourceSets {
    main {
        resources {
            exclude '**/node_modules'
        }
    }
}

application {
    mainClassName = "ru.devag.kamc.KamcApplication"
}

//run.dependsOn processResources

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//compileOnly 'javax.persistence:persistence-api:1.0.2'

	implementation 'org.apache.commons:commons-lang3:3.11'
	implementation 'com.oracle:ojdbc7:12.1.0.2'
	implementation 'org.apache.poi:poi-ooxml:4.1.2'
	//implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
	implementation 'org.apache.commons:commons-text:1.9'
	//runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	//testImplementation 'org.mockito:mockito-core:2.25.0'
	testImplementation 'junit:junit:4.13.1'
}
